# blzlib

./: CMakeLists.txt  README.md  blzlib.c  blzlib.h  blzlib.pc.in  blzlib_internal.h  blzlib_log.c  blzlib_log.h  blzlib_msgs.c  blzlib_util.c  blzlib_util.h  logging.c  main.c  meson.build
examples/: nordic-uart.c  nordic_uart.c  read-manuf-name.c  read_manuf_name.c  scan-discover.c  scan.c
